# sfedu-ictis-ap-dsa

./: .gitignore  Array.cpp  Array.h  BST.h  CMakeLists.txt  List.cpp  List.h  PerformanceTests.cpp  PerformanceTests.h  Queue.cpp  Queue.h  README.md  Stack.cpp  Stack.h  StackTestImpl.h  TestData.h  Tests.cpp  Tests.h  drawInsertions.py  drawSelections.py  main.cpp
.github/workflows/: cmake.yml
performance-tests/: PerformanceTests.cpp  PerformanceTests.h
tests/: ArrayTestImpl.h  ListTestImpl.h  QueueTestImpl.h  StackTestImpl.h  TestData.h  Tests.cpp  Tests.h
